@@ -54,6 +54,8 @@ import javax.swing.table.*;
 
 Vector makeShortcutsVector()
 {
+	v = new Vector();
+
 	EditAction[] actions = jEdit.getActions();
 	for(int i = 0; i < actions.length; i++)
 	{
@@ -74,6 +76,8 @@ Vector makeShortcutsVector()
 			v.addElement(makeRow(label,shortcut1,shortcut2));
 		}
 	}
+
+	return v;
 }
 
 /*
