@@ -2099,6 +2099,17 @@ public class jEdit
 
 	//{{{ Miscellaneous methods
 
+	//{{{ isBackgroundMode() method
+	/**
+	 * Returns true if jEdit was started with the <code>-background</code>
+	 * command-line switch.
+	 * @since jEdit 4.0pre4
+	 */
+	public static boolean isBackgroundModeEnabled()
+	{
+		return background;
+	} //}}}
+
 	//{{{ showMemoryStatusDialog() method
 	/**
 	 * Performs garbage collection and displays a dialog box showing
